# digitalpulse-tld

./: .gitignore  Anchor.toml  CNAME  CONTRACT_VALIDATION_REPORT.md  CONTRACT_VERIFICATION.md  CONTRIBUTING.md  DEPLOYMENT.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION.md  README.md  SECURITY.md  SETUP_CHECKLIST.md  SMART_CONTRACT_SETUP.md  _config.yml  app.js  blockchain-sim.js  blockchain.js  check-contract.sh  claimed-domains.js  config.js  contract-config.js  deploy.sh  index.html  jest.config.js  marketplace.html  marketplace.js  my-domains.html  my-domains.js  package-lock.json  package.json  pnpm-lock.yaml  security.json  solana-config.js  solana-contract.js  solana-utils.js  styles.css  tailwind.config.ts  todo.md  utils.js  verify_contract.sh  (+1 more)
.github/: CODEOWNERS  IMPLEMENTATION_SUMMARY.md  PR_ISSUE_MANAGEMENT.md  SECURITY_CHECKLIST.md  SECURITY_FINDINGS.md  WORKFLOWS.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/agents/: my-agent.agent.md
app/: globals.css  layout.tsx  page.tsx
app/marketplace/: page.tsx
app/my-domains/: page.tsx
components/: Footer.tsx  Navigation.tsx  WalletProvider.tsx
contract/: Anchor.toml  Cargo.toml  README.md  security.txt
contract/src/: lib.rs
nft-upgrade/: Anchor.toml  Cargo.toml  DEPLOY_GUIDE.md  DEPLOY_NOW.sh  FINAL_INSTRUCTIONS.md  QUICK_START.txt  README.md  UPGRADE_CONTRACT.md
nft-upgrade/programs/digitalpulse_tld/src/: lib.rs
programs/: README.md
tests/: README.md  app.test.js  digitalpulse-tld.ts  marketplace.test.js  my-domains.test.js
(+2 files in other folders)
